--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,28 @@
 services:
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - type: bind
+        source: ./nginx.conf
+        target: /etc/nginx/nginx.conf
+    depends_on:
+      - example-frontend
+      - example-backend
+
   example-frontend:
     image: example-frontend:latest
     build:
       context: ./example-frontend
       dockerfile: Dockerfile
-    ports:
-      - "5000:5000"
-    environment:
-      - REACT_APP_BACKEND_URL=http://localhost:8080
     command: ["serve", "-s", "-l", "5000", "build"]
 
   example-backend:
     image: example-backend:latest
     build: ./example-backend
-    ports:
-      - "8080:8080"
     environment:
-      - REQUEST_ORIGIN=http://localhost:5000
       - REDIS_HOST=redis
       - POSTGRES_HOST=db
       - POSTGRES_USER=postgres
@@ -38,7 +43,8 @@ services:
       POSTGRES_PASSWORD: example
     container_name: db-example
     volumes:
-      - type: bind
-        source: ./data
-        target: /var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
+
+volumes:
+  db_data:
 
