--- a/example-frontend/nginx.conf
+++ b/example-frontend/nginx.conf
@@ -1,18 +1,30 @@
-server {
-  listen 80;
+pid /tmp/nginx.pid;
 
-  # configure here where requests to http://localhost/...
-  # are forwarded
-  location / {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri /index.html;
-  }
+events { worker_connections 1024; }
 
-  # configure here where requests to http://localhost/api/...
-  # are forwarded
-  location /api/ {
-    proxy_set_header Host $host;
-    proxy_pass http://example-backend:8080/;
+http {
+  # Non-root temp + log dirs
+  client_body_temp_path   /tmp/client_temp;
+  proxy_temp_path         /tmp/proxy_temp;
+  fastcgi_temp_path       /tmp/fastcgi_temp;
+  uwsgi_temp_path         /tmp/uwsgi_temp;
+  scgi_temp_path          /tmp/scgi_temp;
+
+  access_log  /tmp/access.log;
+  error_log   /tmp/error.log;
+
+  server {
+    listen 8080;
+
+    location / {
+      root /usr/share/nginx/html;
+      index index.html;
+      try_files $uri /index.html;
+    }
+
+    location /api/ {
+      proxy_set_header Host $host;
+      proxy_pass http://example-backend:8080/;
+    }
   }
 }
